restored tests
Signed-off-by: George Jahad <github@blackbirdsystems.net>